# Niece-Scarlett

./: .gitignore  CMakeLists.txt  command.cpp  command.hpp  eslint.config.ts  main.cpp  package-lock.json  package.json  postgres.cpp  postgres.hpp  tsconfig.json  utils.cpp  utils.hpp
api/: annotation.cpp  annotation.hpp  level.cpp  level.hpp  role.cpp  role.hpp
command/: annotation.cpp  annotation.hpp  command_metadata.hpp  hug.cpp  hug.hpp  kiss.cpp  kiss.hpp  language_transfer.cpp  language_transfer.hpp  love.cpp  love.hpp
env/: config.h.in  load_env.cmake
factory/: direct_message_factory.cpp  direct_message_factory.hpp  embed_factory.cpp  embed_factory.hpp  faq_factory.cpp  faq_factory.hpp  pbp_embed_factory.cpp  pbp_embed_factory.hpp  ping_factory.cpp  ping_factory.hpp
languages/language-transfer/: el.json  en.json
registry/: CMakeLists.txt  command_base.hpp  command_registry.cpp  command_registry.hpp
src/: index.ts
src/commands/: hello-world.ts  language-transfer.ts
src/components/: embed.ts
src/translations/: index.ts
src/types/: client.ts  command.ts
src/utils/: load-commands.ts  markdown.ts  sendable.ts
